--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,4 @@ version: ${project.version}
 website: http://robomwm.com
 author: RoboMWM
 main: com.robomwm.reciperemover.RecipeRemover
+loadbefore: [CustomItemRecipes, Slimefun]
