load after multiverse to reduce logspam
Unsure of the consequences of removing before vs. after custom-loaded
worlds...

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,4 @@ website: http://robomwm.com
 author: RoboMWM
 main: com.robomwm.reciperemover.RecipeRemover
 loadbefore: [CustomItemRecipes, Slimefun]
+softdepend: [Multiverse-Core]
